--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ jobs:
         - name:  récupération du repository
           uses: actions/checkout@v3
         - name: installation de node
-          run: actions/setup-node@v3
+          uses: actions/setup-node@v3
           with:
               node-version: '16'
         - name: installation des dépendences
