--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,13 +3,17 @@ on: [push]
 jobs:
   unit-test:
       runs-on : ubuntu-latest
+      strategy:
+        matrix:
+          node: [ '12', '11', '16']
       steps:
         - name:  récupération du repository
           uses: actions/checkout@v3
         - name: installation de node
           uses: actions/setup-node@v3
           with:
-              node-version: '16'
+              node-version: ${{matrix.node}}
+              cache: 'npm'
         - name: installation des dépendences
           run: npm i
         - name:  tests unitaires
