--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,3 +20,8 @@ jobs:
           run: npm run test
         - name : coverage
           run: npm run cover
+        - name: récupération des résultats de tests
+          uses: actions/upload-artifact@v3
+          with: 
+            name: result-test
+            path: ./reports
